# QtSocket

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile.debian-stretch  Makefile  MyLabel.cpp  README.md  commonconnection.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  object_detection2.py  palettes.cpp  runCoverage.sh  tcpclient.cpp  tcpclient.cpp.autosave  tcpclient.hpp  tcpserver.cpp  tcpserver.cpp.autosave  tcpserver.hpp  tcpsocket.pro  udpreceiver.cpp  udpreceiver.hpp  udpsender.cpp  udpsender.hpp
Receiver/: CMakeLists.txt  Dockerfile  Makefile  Receiver.pro  build.sh  colormanager.cpp  colormanager.hpp  findmodel.cpp  findmodel.hpp  list_colour.cpp  list_colour.hpp  util_label_image.cpp  util_label_image.hpp
Receiver/docs/: Doxyfile.in
Receiver/log/: CMakeLists.txt  instrumentor.h  logger.cpp  logger.h
Receiver/resources/: label_map.pbtxt
Receiver/src/: CMakeLists.txt  commonconnection.cpp  commonconnection.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mylabel.cpp  mylabel.hpp  streamerthread.cpp  streamerthread.hpp  tcpclient.cpp  tcpclient.hpp  udpclient.cpp  udpclient.hpp
Receiver/test/: CMakeLists.txt  main.cpp  test_cocolabels.cpp  test_color.cpp  test_genericlabels.cpp  test_imagenetlabels.cpp  test_inference.cpp  test_label_function.hpp  test_labels.cpp  test_loadmodel.cpp  test_tensorflowlabels.cpp
Receiver/testdata/: cat_3.jp2
Receiver/tf/: CMakeLists.txt  colormanager.cpp  findmodel.cpp  findmodel.hpp  image_utils.hpp  image_utils_impl.hpp  label_utils.cpp  label_utils.hpp  labels.cpp  labels.hpp  model_support_function.hpp  model_tpu.cpp  model_tpu.hpp  model_tpu_orig.cpp  object_detection.cpp  object_detection.hpp  tensordata.hpp  tensordata_impl.hpp  util_label_image.cpp  util_label_image.hpp
ReceiverTPU/: CMakeLists.txt  Dockerfile.ubuntu-qt  Receiver.pro  build.sh  crosstool.mk
ReceiverTPU/log/: CMakeLists.txt
ReceiverTPU/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.hpp  mylabel.cpp  mylabel.hpp  streamerthread.cpp  streamerthread.hpp  tcpclient.cpp
ReceiverTPU/tf/: CMakeLists.txt  labels.cpp  list_colour.cpp  model_support_function.hpp  model_tpu.cpp  model_tpu.hpp  util_label_image.cpp  util_label_image.hpp
Sender/: CMakeLists.txt
Sender/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui  tcpclient.cpp  tcpclient.hpp  tcpserver.cpp  tcpserver.hpp
Server/: CMakeLists.txt
Server/log/: CMakeLists.txt  logger.cpp
Server/src/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
